--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>ALL CAPS</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" 
+      type="image/png" 
+      href="favicon.png">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <style>
+    /* Remove the navbar's default margin-bottom and rounded borders */ 
+    .navbar {
+      margin-bottom: 0;
+      border-radius: 0;
+      font-size:20px;
+    }
+    
+    /* Add a gray background color and some padding to the footer */
+    footer {
+      background-color: #f2f2f2;
+      padding: 25px;
+    }
+    #overlay {
+      position: absolute;
+  bottom: 0;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  color: #f1f1f1;
+  width: 100%;
+  transition: .5s ease;
+  opacity:0;
+  color: white;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+}
+  </style>
+</head>
+<body>
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+
+     
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="index.html"><img src="masklogo.png" alt="MF DOOM"></a></li>
+      </ul>
+  </div>
+</nav>
+<div class="jumbotron">
+  <div class="container text-center">
+    <h3>	&#60;ALLCAPS&#62; WHEN YOU SPELL THE MAN NAME	&#60;/ALLCAPS&#62;</h3>
+      <p>The MF DOOM placeholder text generator</p>
+
+<div id="second"></div>
+</div>
+</div>
+    <div id="root"></div>
+
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+  <footer class="container-fluid text-center">
+    <p>Created by <a href="https://www.jamfish.co.uk/">Jamfish 2021</a></p>
+  </footer>
+  
+  </body>
+  </html>
